Add update button to flex container

--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -15,4 +15,6 @@ block content
       else
         li This genre has no games.
 
-    a(href=genre.url + '/delete' class="action-btn") Delete Genre
+    div(class="actions-container")
+      a(href=genre.url + '/update' class="action-btn") Update Genre
+      a(href=genre.url + '/delete' class="action-btn") Delete Genre
