--- a/views/platform_detail.pug
+++ b/views/platform_detail.pug
@@ -15,4 +15,6 @@ block content
       else
         li This platform has no games.
 
-    a(href=platform.url + '/delete' class="action-btn") Delete Platform
+    div(class="actions-container")
+      a(href=platform.url + '/update' class="action-btn") Update Platform
+      a(href=platform.url + '/delete' class="action-btn") Delete Platform
