Correct link typo

--- a/views/developer_detail.pug
+++ b/views/developer_detail.pug
@@ -16,5 +16,5 @@ block content
         li This developer has no games.
 
     div(class="actions-container")
-      a(href=developer.url + '/udpate' class="action-btn") Update Developer
+      a(href=developer.url + '/update' class="action-btn") Update Developer
       a(href=developer.url + '/delete' class="action-btn") Delete Developer
