--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -176,8 +176,7 @@ ul {
 }
 
 .game-detail {
-  display: grid;
-  grid-template-columns: 1.4fr 1fr;
+  display: flex;
   gap: 1.15rem;
 }
 
@@ -188,6 +187,8 @@ ul {
 }
 
 .game-info {
+  min-width: 40%;
+  max-width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -203,6 +204,10 @@ ul {
   padding-bottom: 0.4rem;
 }
 
+.game-description {
+  word-wrap: break-word;
+}
+
 @media(max-width: 1500px) {
   .game-detail {
     display: flex;
@@ -211,8 +216,13 @@ ul {
     gap: 1rem;
   }
 
+  .game-detail img {
+    max-width: 100%;
+  }
+
   .game-info {
     padding: 1rem;
+    width: 100%;
   }
 }
 
