--- a/views/home.pug
+++ b/views/home.pug
@@ -8,4 +8,4 @@ block content
       p Here you can browse a variety of games, game developers, genres, and platforms
       p Or you're welcome to create a new one for others to discover
       p Whichever you decide to do, thanks for taking the time to check out my project!
-      p You can check out my other projects on my #[a(href="https://github.com/brajpatel" target="_blank" class="github-link") github].
+      p You can check out my other projects on my #[a(href="https://github.com/brajpatel" target="_blank" class="github-link") github]
