--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -139,6 +139,7 @@ ul {
 .game-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-items: center;
   gap: 2rem;
 }
 
