--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,7 @@ html(lang='en')
           block sidebar
             p(class='h2 text-center font-weight-bold') Game Overflow
             hr
-            div(class='d-flex flex-column')
+            div(class='d-flex flex-column pb-3')
               a(class='sidebar-link' href='/') Home
               hr
               p(class='h4 pl-4 font-weight-bold') Browse
